[package]
name = "glutin"
version = "0.25.1"
authors = ["The glutin contributors", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Cross-platform OpenGL context provider."
keywords = ["windowing", "opengl"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/rust-windowing/glutin"
documentation = "https://docs.rs/glutin"
edition = "2018"

[package.metadata.docs.rs]
features = ["serde"]


[dependencies]
image = "0.23.9"
lazy_static = "1.3"
# winit = { git = "https://github.com/bebrws/winit", branch = "master" }
winit = {  path = "/Users/bbarrows/repos/winit22" }

[target.'cfg(target_os = "android")'.dependencies]
android_glue = "0.2"
glutin_egl_sys = { version = "0.1.4", path = "../glutin_egl_sys" }
parking_lot = "0.11"

[target.'cfg(target_os = "emscripten")'.dependencies]
glutin_emscripten_sys = { version = "0.1.1", path = "../glutin_emscripten_sys" }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2.6"
glutin_gles2_sys = { version = "0.1.4", path = "../glutin_gles2_sys" }

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.3"
cocoa = "0.23"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "winuser",
    "wingdi",
    "libloaderapi",
]

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.6.1"
glutin_wgl_sys = { version = "0.1.4", path = "../glutin_wgl_sys" }
glutin_egl_sys = { version = "0.1.4", path = "../glutin_egl_sys" }
parking_lot = "0.11"

